UI-1394: Fixed the badges in myaccount left menu on smaller devices

--- a/apps/myaccount/style/app.css
+++ b/apps/myaccount/style/app.css
@@ -217,6 +217,9 @@
 	#myaccount .myaccount-container {
 		padding-left: 47px;
 	}
+	#myaccount .myaccount-menu .badge {
+		display: none;
+	}
 }
 
 #myaccount .myaccount-content .list-settings .card-type.visa {
